added ids and pseudo classes

--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -15,11 +15,10 @@
 </head>
 
 <body>
-<center><h2>Quick Reviews</h2></center>
 
 <br/>
-<br/>
 
+<div id="qtab">
 <center><h3 attr="revtitl">In Rainbows, Radiohead</h3></center>
 <center><img src="images/inrainbowscover.jpg" height="200px" width="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000; padding: 0.45em; display: inline;"></center>
 
@@ -37,12 +36,12 @@
         <li>Weird Fishes/Arpeggi - <strong>10/10</strong></li>
         <li>All I Need - <strong>10/10</strong></li>
         <li>15 Step - <strong>10/10</strong></li>
-        <li>Reckoner - <strong>9.7/10</strong></li>
+        <li>Reckoner - <strong>10/10</strong></li>
         <li>House of Cards - <strong>9.7/10</strong></li>
-        <li>Nude - <strong>9.5</strong></li>
-        <li>Bodysnatchers - <strong>9.5/10</strong></li>
-        <li>Videotape - <strong>8.7</strong></li>
-        <li>Faust Arp - <strong>8.7</strong></li>
+        <li>Nude - <strong>9.7</strong></li>
+        <li>Bodysnatchers - <strong>9.7/10</strong></li>
+        <li>Videotape - <strong>9.7</strong></li>
+        <li>Faust Arp - <strong>9.3</strong></li>
       </ol>
     </td width="250px">
     <td>
@@ -55,16 +54,19 @@
   <tfoot>
     <tr>
       <td>
-        <h4 class="scoralign" attr="score">Score: 9.8/10</h4>
+        <h4 attr="score">Average Score: 9.81/10</h4>
       </td>
     </tr>
   </tfoot>
 </table>
-<center><p>To listen to (most of) In Rainbows on youtube, click <a href="https://www.youtube.com/watch?v=Xq_a8f24UJI" target="_blank">here</a></p></center>
+<p id="scoralign">My Score: 10/10</p>
+<p id="scoralign">To listen to (most of) In Rainbows on youtube, click <a href="https://www.youtube.com/watch?v=Xq_a8f24UJI" target="_blank">here</a></p>
+</div>
 
 <br/>
 <br/>
 
+<div id="qtab">
 <center><h3 attr="revtitl">iridescence, BROCKHAMPTON</h3></center>
 <center><img src="images/irdcover.jpg" width="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000066; padding: 0.45em; display: inline;"></center>
 
@@ -103,16 +105,19 @@
   <tfoot>
     <tr>
       <td>
-        <h4 class="scoralign" attr="score">Score: 7.5/10</h4>
+        <h4 attr="score">Average Score: 7.5/10</h4>
       </td>
     </tr>
   </tfoot>
 </table>
-<center><p>To read my full review of this album, click <a href="iridescenceReview.html">here</a>.</p></center>
+<p id="scoralign">My Score: 7.5</p>
+<p id="scoralign">To read my full review of this album, click <a href="iridescenceReview.html">here</a>.</p>
+</div>
+
 <br/>
 <br/>
 
-
+<div id="qtab">
 <center><h3 attr="revtitl">Either / Or, Elliott Smith</h3></center>
 <center><img src="images/eitherorcover.jpg" weight="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
 
@@ -150,12 +155,14 @@
   <tfoot>
     <tr>
       <td>
-        <h4 class="scoralign" attr="score">Score: 10/10</h4>
+        <h4 attr="score">Average Score: 9.83/10</h4>
       </td>
     </tr>
   </tfoot>
 </table>
-<center><p>To read my full review of this album, click <a href="EitherOrReview.html">here</a>.</p></center>
+<p id="scoralign">My Score: 10/10</p>
+<p id="scoralign">To read my full review of this album, click <a href="EitherOrReview.html">here</a>.</p>
+</div>
 </body>
 
 <br/>
