--- a/HomePage.html
+++ b/HomePage.html
@@ -37,11 +37,11 @@
             <p><h5 style="color: #000066; margin-left: 20px;">Hello there! My name is John, and I love music. On this site I'll be talking about some
                 of my favorite albums and artists, and even doing some reviews. Here's a little bit about me and
                 how I came to love music: Around the time that I was 9 or 10, I discovered the itunes store, on which
-                I would spend hours exploring and making lists of songs that I wanted. At this point, I didn't stray
+                I would spend hours exploring and making lists of songs that I liked. At this point, I didn't stray
                 far out of the realm of pop music. Then, I discovered Coldplay, a band that bridges pop styles with rock,
                 electronic, and many other genres. Coldplay was my gateway into the wider musical universe, putting me
                 on the path to some of my favorite artists and eclectic musical tastes. Currently, I listen to just about everything,
-                including: rock to pop, indie, grunge, shoegaze, post-punk, IDM, rap, ambient, alternative, synth pop, electronic,
+                including: rock, pop, indie, grunge, shoegaze, post-punk, IDM, rap, ambient, alternative, synth pop, electronic,
                 lo-fi, industrial rap, jazz, plunderphonics, new wave, glam rock, trance, classical, modern clasical,
                 hip-hop, trip-hop, noise rock, punk, or folk, and everything in between (except for country, but Wilco might be
                 changing my mind).
