added some tags

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<center><img src="images/eitherorcover.jpg" width=300px height=300px style="border: 5px; border-style: solid; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
+<center><img id="eoimg" src="images/eitherorcover.jpg" style="border: 5px; border-style: solid; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
 
 
 <h3 align="center" attr="revtitl">Either / Or, Elliott Smith</h3>
