--- a/HomePage.html
+++ b/HomePage.html
@@ -30,7 +30,7 @@
       <tr>
         <th>
           <td style="width: 50%;">
-            <img src="images/records.jpg" width="400" height="400" style="margin-left: 70px; border: 5px; border-style: solid; border-color: #ffffff; padding: 0.45em; display: inline;"></th>
+            <img id="hpimg" src="images/records.jpg" style="margin-left: 70px; border: 5px; border-style: solid; border-color: #ffffff; padding: 0.45em; display: inline;"></th>
           </td>
         <th>
           <td align="left" style="width: 50%;">
