--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -18,14 +18,15 @@
 
 <br/>
 
+<div id="qrcontent">
 <div id="qtab">
 <center><h3 attr="revtitl">In Rainbows, Radiohead</h3></center>
-<center><img src="images/inrainbowscover.jpg" height="200px" width="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000; padding: 0.45em; display: inline;"></center>
+<center><img id="irimg" src="images/inrainbowscover.jpg"></center>
 
 <table attr="qrtab" width="400 px" align="center">
   <thead>
     <tr>
-      <td align="left">Song/Ranking</td>
+      <td align="center">Song/Ranking</td>
       <td align="center">Thoughts</td>
     </tr>
   </thead>
@@ -68,12 +69,12 @@
 
 <div id="qtab">
 <center><h3 attr="revtitl">iridescence, BROCKHAMPTON</h3></center>
-<center><img src="images/irdcover.jpg" width="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #000066; padding: 0.45em; display: inline;"></center>
+<center><img id="irdimg1" src="images/irdcover.jpg"></center>
 
 <table attr="qrtab" width="400 px" align="center">
   <thead>
     <tr>
-      <td align="left">Song/Ranking</td>
+      <td align="center">Song/Ranking</td>
       <td align="center">Thoughts</td>
     </tr>
   </thead>
@@ -119,12 +120,12 @@
 
 <div id="qtab">
 <center><h3 attr="revtitl">Either / Or, Elliott Smith</h3></center>
-<center><img src="images/eitherorcover.jpg" weight="200px" height="200px" style="border: 5px; border-style: solid; border-radius: 30px; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
+<center><img id="eoimg1" src="images/eitherorcover.jpg"></center>
 
 <table attr="qrtab" width="400 px" align="center">
   <thead>
     <tr>
-      <td align="left">Song/Ranking</td>
+      <td align="center">Song/Ranking</td>
       <td align="center">Thoughts</td>
     </tr>
   </thead>
@@ -162,6 +163,7 @@
 </table>
 <p id="scoralign">My Score: 10/10</p>
 <p id="scoralign">To read my full review of this album, click <a href="EitherOrReview.html">here</a>.</p>
+</div>
 </div>
 </body>
 
