--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<center><img src="images/irdcover.jpg" width=300px height=300px style="border: 5px; border-style: solid; border-color: #000066; padding: 0.45em; display: inline;"></center>
+<center><img id="irdimg" src="images/irdcover.jpg" style="border: 5px; border-style: solid; border-color: #000066; padding: 0.45em; display: inline;"></center>
 <center><h3 attr="revtitl"><span style="color: blue;">iridescence</span>, BROCKHAMPTON</h3></center>
 
 <p><h4>
