all requirements met

--- a/EitherOrReview.html
+++ b/EitherOrReview.html
@@ -17,7 +17,7 @@
 <center><img id="eoimg" src="images/eitherorcover.jpg" style="border: 5px; border-style: solid; border-color: #4d0000; padding: 0.45em; display: inline;"></center>
 
 
-<h3 align="center" attr="revtitl">Either / Or, Elliott Smith</h3>
+<h3 class="title" align="center" attr="revtitl">Either / Or, Elliott Smith</h3>
 <br/>
 <br/>
 <p align="center" style="color: #000066;">This review isn't quite ready yet, but it will be soon! In the meantime, you can:</p>
