--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -20,7 +20,7 @@
 
 <div id="qrcontent">
 <div id="qtab">
-<center><h3 attr="revtitl">In Rainbows, Radiohead</h3></center>
+<center><h3 class="title" attr="revtitl">In Rainbows, Radiohead</h3></center>
 <center><img id="irimg" src="images/inrainbowscover.jpg"></center>
 
 <table attr="qrtab" width="400 px" align="center">
@@ -68,7 +68,7 @@
 <br/>
 
 <div id="qtab">
-<center><h3 attr="revtitl">iridescence, BROCKHAMPTON</h3></center>
+<center><h3 class="title" attr="revtitl">iridescence, BROCKHAMPTON</h3></center>
 <center><img id="irdimg1" src="images/irdcover.jpg"></center>
 
 <table attr="qrtab" width="400 px" align="center">
@@ -119,7 +119,7 @@
 <br/>
 
 <div id="qtab">
-<center><h3 attr="revtitl">Either / Or, Elliott Smith</h3></center>
+<center><h3 class="title" attr="revtitl">Either / Or, Elliott Smith</h3></center>
 <center><img id="eoimg1" src="images/eitherorcover.jpg"></center>
 
 <table attr="qrtab" width="400 px" align="center">
