--- a/iridescenceReview.html
+++ b/iridescenceReview.html
@@ -16,7 +16,7 @@
 
 <body>
 <center><img id="irdimg" src="images/irdcover.jpg" style="border: 5px; border-style: solid; border-color: #000066; padding: 0.45em; display: inline;"></center>
-<center><h3 attr="revtitl"><span style="color: blue;">iridescence</span>, BROCKHAMPTON</h3></center>
+<center><h3 class="title" attr="revtitl"><span style="color: blue;">iridescence</span>, BROCKHAMPTON</h3></center>
 
 <p><h4>
   iridescence is a ride. It demands your attention from the first moment of the first track, NEW ORLEANS, with its
