--- a/HomePage.html
+++ b/HomePage.html
@@ -20,7 +20,7 @@
   <br/>
   <br/>
 
-  <center><p><h1 style="color: #000066;">John Turner's Music Reviews</h1></p></center>
+  <center><p><h1 class="underline" style="color: #000066;">John Turner's Music Reviews</h1></p></center>
 
   <br/>
   <br/>
