--- a/QuickReviews.html
+++ b/QuickReviews.html
@@ -60,7 +60,7 @@
     </tr>
   </tfoot>
 </table>
-<p id="scoralign">My Score: 10/10</p>
+<p id="myscore">My Score: 10/10</p>
 <p id="scoralign">To listen to (most of) In Rainbows on youtube, click <a href="https://www.youtube.com/watch?v=Xq_a8f24UJI" target="_blank">here</a></p>
 </div>
 
@@ -111,7 +111,7 @@
     </tr>
   </tfoot>
 </table>
-<p id="scoralign">My Score: 7.5</p>
+<p id="myscore">My Score: 7.5</p>
 <p id="scoralign">To read my full review of this album, click <a href="iridescenceReview.html">here</a>.</p>
 </div>
 
@@ -161,7 +161,7 @@
     </tr>
   </tfoot>
 </table>
-<p id="scoralign">My Score: 10/10</p>
+<p id="myscore">My Score: 10/10</p>
 <p id="scoralign">To read my full review of this album, click <a href="EitherOrReview.html">here</a>.</p>
 </div>
 </div>
